Salvaged one forgotten Cyrillic unencoded glyph

--- a/GF_glyphsets/Cyrillic/glyphs/CustomFilter_GF_Cyrillic.plist
+++ b/GF_glyphsets/Cyrillic/glyphs/CustomFilter_GF_Cyrillic.plist
@@ -590,6 +590,7 @@
 			<string>gestroke-cy.loclBSH</string>
 			<string>yu-cy.loclBGR</string>
 			<string>Gestroke-cy.loclBSH</string>
+			<string>brevecomb-cy</string>
 			<string>De-cy.loclBGR</string>
 			<string>Ii-cy.loclBGR</string>
 			<string>Iishort-cy.loclBGR</string>
