--- a/GF_glyphsets/Greek/glyphs/CustomFilter_GF_Greek.plist
+++ b/GF_glyphsets/Greek/glyphs/CustomFilter_GF_Greek.plist
@@ -962,6 +962,38 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>exclam</string>
+			<string>quotedbl</string>
+			<string>percent</string>
+			<string>ampersand</string>
+			<string>parenleft</string>
+			<string>parenright</string>
+			<string>asterisk</string>
+			<string>plus</string>
+			<string>comma</string>
+			<string>hyphen</string>
+			<string>period</string>
+			<string>slash</string>
+			<string>zero</string>
+			<string>one</string>
+			<string>two</string>
+			<string>three</string>
+			<string>four</string>
+			<string>five</string>
+			<string>six</string>
+			<string>seven</string>
+			<string>eight</string>
+			<string>nine</string>
+			<string>colon</string>
+			<string>semicolon</string>
+			<string>at</string>
+			<string>bracketleft</string>
+			<string>backslash</string>
+			<string>bracketright</string>
+			<string>guillemetleft</string>
+			<string>guillemetright</string>
+			<string>acutecomb</string>
+			<string>dieresiscomb</string>
 			<string>numeral-greek</string>
 			<string>lowernumeral-greek</string>
 			<string>questiongreek</string>
@@ -1039,6 +1071,9 @@
 			<string>omegatonos</string>
 			<string>KaiSymbol</string>
 			<string>kaiSymbol</string>
+			<string>endash</string>
+			<string>emdash</string>
+			<string>ellipsis</string>
 		</array>
 		<key>name</key>
 		<string>GF_Greek_Core</string>
