--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,10 @@ jobs:
       - name: Run Tests
         run: |
           pytest ./tests
+      - name: Run Fontbakery tests
+        run: |
+          git clone git@github.com:fonttools/fontbakery.git
+          cd fontbakery
+          pip install .
+          pip freeze | grep glyphsets
+          pytest
