--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,5 +34,5 @@ jobs:
           git clone https://github.com/fonttools/fontbakery.git
           cd fontbakery
           pip install .[all]
-          pip freeze | grep glyphsets
+          pip freeze
           pytest
