Updated glyph names as part of glyphsLib update

--- a/data/results/plist/CustomFilter_GF_Arabic.plist
+++ b/data/results/plist/CustomFilter_GF_Arabic.plist
@@ -123,19 +123,19 @@
 			<string>gaf-ar</string>
 			<string>hehDoachashmee-ar</string>
 			<string>hehgoal-ar</string>
-			<string>yeh-farsi</string>
+			<string>yehFarsi-ar</string>
 			<string>yehbarree-ar</string>
 			<string>fullstop-ar</string>
-			<string>zero-persian</string>
-			<string>one-persian</string>
-			<string>two-persian</string>
-			<string>three-persian</string>
-			<string>four-persian</string>
-			<string>five-persian</string>
-			<string>six-persian</string>
-			<string>seven-persian</string>
-			<string>eight-persian</string>
-			<string>nine-persian</string>
+			<string>zeroFarsi-ar</string>
+			<string>oneFarsi-ar</string>
+			<string>twoFarsi-ar</string>
+			<string>threeFarsi-ar</string>
+			<string>fourFarsi-ar</string>
+			<string>fiveFarsi-ar</string>
+			<string>sixFarsi-ar</string>
+			<string>sevenFarsi-ar</string>
+			<string>eightFarsi-ar</string>
+			<string>nineFarsi-ar</string>
 			<string>kehehThreedotsabove-ar</string>
 			<string>lefttorightmark</string>
 			<string>endash</string>
@@ -282,22 +282,22 @@
 			<string>u-ar</string>
 			<string>yu-ar</string>
 			<string>ve-ar</string>
-			<string>yeh-farsi</string>
+			<string>yehFarsi-ar</string>
 			<string>yehTail-ar</string>
 			<string>yehVabove-ar</string>
 			<string>e-ar</string>
 			<string>fullstop-ar</string>
 			<string>ae-ar</string>
-			<string>zero-persian</string>
-			<string>one-persian</string>
-			<string>two-persian</string>
-			<string>three-persian</string>
-			<string>four-persian</string>
-			<string>five-persian</string>
-			<string>six-persian</string>
-			<string>seven-persian</string>
-			<string>eight-persian</string>
-			<string>nine-persian</string>
+			<string>zeroFarsi-ar</string>
+			<string>oneFarsi-ar</string>
+			<string>twoFarsi-ar</string>
+			<string>threeFarsi-ar</string>
+			<string>fourFarsi-ar</string>
+			<string>fiveFarsi-ar</string>
+			<string>sixFarsi-ar</string>
+			<string>sevenFarsi-ar</string>
+			<string>eightFarsi-ar</string>
+			<string>nineFarsi-ar</string>
 			<string>sindhiampersand-ar</string>
 			<string>sindhipostpositionmen-ar</string>
 			<string>lefttorightmark</string>
