--- a/Lib/glyphsets/definitions/GF_Latin_Vietnamese.yaml
+++ b/Lib/glyphsets/definitions/GF_Latin_Vietnamese.yaml
@@ -1,3 +1,2 @@
-description: Achuar-Shiwiar, Aguaruna, Apinayé, Bini, Cashinahua, Chachi, Embu, Kaingang,
-  Kamba (Kenya), Kikuyu, Mirandese, Páez, Shuar, Toba, Umbundu, Vietnamese, Walser,
-  Waorani, Xavánte
+language_codes:
+- vi_Latn
