--- a/data/results/plist/CustomFilter_GF_Latin.plist
+++ b/data/results/plist/CustomFilter_GF_Latin.plist
@@ -1313,6 +1313,124 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>exclam</string>
+			<string>quotedbl</string>
+			<string>numbersign</string>
+			<string>percent</string>
+			<string>ampersand</string>
+			<string>quotesingle</string>
+			<string>parenleft</string>
+			<string>parenright</string>
+			<string>asterisk</string>
+			<string>plus</string>
+			<string>comma</string>
+			<string>hyphen</string>
+			<string>period</string>
+			<string>slash</string>
+			<string>zero</string>
+			<string>one</string>
+			<string>two</string>
+			<string>three</string>
+			<string>four</string>
+			<string>five</string>
+			<string>six</string>
+			<string>seven</string>
+			<string>eight</string>
+			<string>nine</string>
+			<string>colon</string>
+			<string>semicolon</string>
+			<string>question</string>
+			<string>at</string>
+			<string>A</string>
+			<string>B</string>
+			<string>C</string>
+			<string>D</string>
+			<string>E</string>
+			<string>F</string>
+			<string>G</string>
+			<string>H</string>
+			<string>I</string>
+			<string>J</string>
+			<string>K</string>
+			<string>L</string>
+			<string>M</string>
+			<string>N</string>
+			<string>O</string>
+			<string>P</string>
+			<string>Q</string>
+			<string>R</string>
+			<string>S</string>
+			<string>T</string>
+			<string>U</string>
+			<string>V</string>
+			<string>W</string>
+			<string>X</string>
+			<string>Y</string>
+			<string>Z</string>
+			<string>bracketleft</string>
+			<string>bracketright</string>
+			<string>a</string>
+			<string>b</string>
+			<string>c</string>
+			<string>d</string>
+			<string>e</string>
+			<string>f</string>
+			<string>g</string>
+			<string>h</string>
+			<string>i</string>
+			<string>j</string>
+			<string>k</string>
+			<string>l</string>
+			<string>m</string>
+			<string>n</string>
+			<string>o</string>
+			<string>p</string>
+			<string>q</string>
+			<string>r</string>
+			<string>s</string>
+			<string>t</string>
+			<string>u</string>
+			<string>v</string>
+			<string>w</string>
+			<string>x</string>
+			<string>y</string>
+			<string>z</string>
+			<string>Agrave</string>
+			<string>Aacute</string>
+			<string>Acircumflex</string>
+			<string>Atilde</string>
+			<string>Egrave</string>
+			<string>Eacute</string>
+			<string>Ecircumflex</string>
+			<string>Igrave</string>
+			<string>Iacute</string>
+			<string>Ograve</string>
+			<string>Oacute</string>
+			<string>Ocircumflex</string>
+			<string>Otilde</string>
+			<string>Ugrave</string>
+			<string>Uacute</string>
+			<string>Yacute</string>
+			<string>agrave</string>
+			<string>aacute</string>
+			<string>acircumflex</string>
+			<string>atilde</string>
+			<string>egrave</string>
+			<string>eacute</string>
+			<string>ecircumflex</string>
+			<string>igrave</string>
+			<string>iacute</string>
+			<string>ograve</string>
+			<string>oacute</string>
+			<string>ocircumflex</string>
+			<string>otilde</string>
+			<string>ugrave</string>
+			<string>uacute</string>
+			<string>yacute</string>
+			<string>Abreve</string>
+			<string>abreve</string>
+			<string>Dcroat</string>
+			<string>dcroat</string>
 			<string>Itilde</string>
 			<string>itilde</string>
 			<string>Utilde</string>
@@ -1321,6 +1439,11 @@
 			<string>ohorn</string>
 			<string>Uhorn</string>
 			<string>uhorn</string>
+			<string>gravecomb</string>
+			<string>acutecomb</string>
+			<string>circumflexcomb</string>
+			<string>tildecomb</string>
+			<string>brevecomb</string>
 			<string>hookabovecomb</string>
 			<string>horncomb</string>
 			<string>dotbelowcomb</string>
@@ -1406,12 +1529,21 @@
 			<string>uhorntilde</string>
 			<string>Uhorndotbelow</string>
 			<string>uhorndotbelow</string>
+			<string>Ygrave</string>
+			<string>ygrave</string>
 			<string>Ydotbelow</string>
 			<string>ydotbelow</string>
 			<string>Yhookabove</string>
 			<string>yhookabove</string>
 			<string>Ytilde</string>
 			<string>ytilde</string>
+			<string>endash</string>
+			<string>emdash</string>
+			<string>quoteleft</string>
+			<string>quoteright</string>
+			<string>quotedblleft</string>
+			<string>quotedblright</string>
+			<string>ellipsis</string>
 			<string>brevecomb_acutecomb</string>
 			<string>brevecomb_gravecomb</string>
 			<string>brevecomb_hookabovecomb</string>
