--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,7 @@
     "config:recommended"
   ],
   "rangeStrategy": "bump",
-  "timezone": "America/Los_Angeles",
+  "timezone": "Europe/Berlin",
   "schedule": [
     "before 8am"
   ]
