Reinstall local glyphsets one more time in case it was overwritten by a pinned glyphsets version from fontbakery

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,5 +34,8 @@ jobs:
           git clone https://github.com/fonttools/fontbakery.git
           cd fontbakery
           pip install .[all]
+          cd ..
+          pip install .[dev]
           pip freeze
+          cd fontbakery
           pytest
