--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -2,8 +2,9 @@ name: Check for changes in gflanguages
 
 on:
   repository_dispatch:
-    types: [run-script]
-
+    types:
+      - test
+ 
 jobs:
   run-script:
     runs-on: ubuntu-latest
