--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -26,5 +26,6 @@ jobs:
         pip install .
         pip install -U git+https://github.com/googlefonts/lang
         pip freeze
+        sh build.sh
         cd ..
         diff -r glyphsets/data glyphsets2/data || gh issue create --title "Changes in lang data" --body "Changes in gflanguages lead to updated glyphset definitions" --label "gflanguages"
