--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -27,4 +27,4 @@ jobs:
         sh build.sh
         cd ..
         cd glyphsets
-        diff -r data/results ../glyphsets2/data/results || export DIFF=$(diff -r data/results ../glyphsets2/data/results); echo -e "Changes in gflanguages lead to the following glyphset definition changes: ```$DIFF```" > BODY; cat BODY; export BODY=$(cat BODY); gh issue create --title "Changes in gflanguages data" --body "$BODY" --label "gflanguages"
+        diff -r data/results ../glyphsets2/data/results || export DIFF=$(diff -r data/results ../glyphsets2/data/results); echo -e "Changes in gflanguages lead to the following glyphset definition changes: ```$DIFF```" > BODY; cat BODY; export BODY=$(cat BODY); gh issue create --title "Changes in gflanguages data" --body "$BODY"
