--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -3,7 +3,7 @@ name: Check for changes in gflanguages
 on:
   push:
     paths:
-      - '**.yml' 
+      - 'checklang.yml' 
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -26,4 +26,4 @@ jobs:
         pip freeze
         sh build.sh
         cd ..
-        diff -r glyphsets/data/results glyphsets2/data/results || export DIFF=$(diff -r glyphsets/data/results glyphsets2/data/results); BODY="Changes in gflanguages lead to the following glyphset definition changes:\n\n$DIFF\n"; echo $BODY > BODY; gh issue create --title "Changes in gflanguages data" --body "$BODY" --label "dependencies"
+        diff -r glyphsets/data/results glyphsets2/data/results || export DIFF=$(diff -r glyphsets/data/results glyphsets2/data/results); export BODY="Changes in gflanguages lead to the following glyphset definition changes:\n\n$DIFF\n"; gh issue create --title "Changes in gflanguages data" --body "$BODY" --label "dependencies"
