--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -3,7 +3,7 @@ name: Check for changes in gflanguages
 on:
   push:
     paths:
-      - 'checklang.yml' 
+      - '**.yml' 
 jobs:
   run-script:
     runs-on: ubuntu-latest
