--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -26,4 +26,4 @@ jobs:
         pip freeze
         sh build.sh
         cd ..
-        diff -r glyphsets/data/results glyphsets2/data/results || export DIFF=$(diff -r glyphsets/data/results glyphsets2/data/results); export BODY="Changes in gflanguages lead to the following glyphset definition changes:\n\n$(diff -r glyphsets/data/results glyphsets2/data/results)\n"; gh issue create --title "Changes in gflanguages data" --label "dependencies" --body "$BODY"
+        diff -r glyphsets/data/results glyphsets2/data/results || export DIFF=$(diff -r glyphsets/data/results glyphsets2/data/results); export BODY="Changes in gflanguages lead to the following glyphset definition changes: $(diff -r glyphsets/data/results glyphsets2/data/results)"; gh issue create --title "Changes in gflanguages data" --label "dependencies" --body "$BODY"
