--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -4,8 +4,9 @@ on:
   push:
     paths:
       - '**.yml' 
+
 jobs:
-  run-script:
+  diff:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -26,4 +27,5 @@ jobs:
         pip freeze
         sh build.sh
         cd ..
-        diff -r glyphsets/data/results glyphsets2/data/results || echo -e "Changes in gflanguages lead to the following glyphset definition changes:\n\n" > BODY; echo -e "`diff -r glyphsets/data/results glyphsets2/data/results`" >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY
+        cd glyphsets
+        diff -r data/results ../glyphsets2/data/results || echo -e "Changes in gflanguages lead to the following glyphset definition changes:\n\n" > BODY; echo -e "`diff -r data/results ../glyphsets2/data/results`" >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY; rm BODY
