--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -28,4 +28,4 @@ jobs:
         sh build.sh
         cd ..
         cd glyphsets
-        diff -r data/results ../glyphsets2/data/results || echo -e "Changes in gflanguages lead to the following glyphset definition changes:\n\n" > BODY; echo -e "`diff -r data/results ../glyphsets2/data/results`" >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY; rm BODY
+        diff -r data/results ../glyphsets2/data/results || echo -e "Changes in gflanguages lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```' >> BODY; echo -e "`diff -r data/results ../glyphsets2/data/results`" >> BODY; echo -e '```' >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY; rm BODY
