--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -31,4 +31,4 @@ jobs:
         sh build.sh
         cd ..
         cd glyphsets
-        diff -r data/results ../glyphsets2/data/results && diff GLYPHSETS.md ../glyphsets2/GLYPHSETS.md || echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r data/results ../glyphsets2/data/results && diff GLYPHSETS.md ../glyphsets2/GLYPHSETS.md`" >> BODY; echo -e '```' >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
+        (diff -r data/results ../glyphsets2/data/results && diff GLYPHSETS.md ../glyphsets2/GLYPHSETS.md) || echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`(diff -r data/results ../glyphsets2/data/results && diff GLYPHSETS.md ../glyphsets2/GLYPHSETS.md)`" >> BODY; echo -e '```' >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
