--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -3,7 +3,7 @@ name: Check for changes in gflanguages
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 0 * * *'
+    - cron:  '0 23 * * 3'
 
 jobs:
   diff:
