--- a/.github/workflows/update_pr.yml
+++ b/.github/workflows/update_pr.yml
@@ -1,6 +1,10 @@
 name: Update on Push
 
-on: push
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   format-code:
