--- a/.github/workflows/update_pr.yml
+++ b/.github/workflows/update_pr.yml
@@ -1,4 +1,4 @@
-name: Update data on Push
+name: Update glyphset data
 
 on:
   push:
@@ -32,7 +32,7 @@ jobs:
       with:
         # Optional. Commit message for the created commit.
         # Defaults to "Apply automatic changes"
-        commit_message: Updating glyphset data
+        commit_message: Update glyphset data
         # Optional. Options used by `git-commit`.
         # See https://git-scm.com/docs/git-commit#_options
         commit_options: ''
