--- a/.github/workflows/update_pr.yml
+++ b/.github/workflows/update_pr.yml
@@ -1,8 +1,8 @@
 name: Update glyphset data
 
 on:
-  push:
-    branches: [main]
+  # push:
+  #   branches: [main]
   pull_request:
     branches: [main]
 
