--- a/.github/workflows/update_pr.yml
+++ b/.github/workflows/update_pr.yml
@@ -33,6 +33,7 @@ jobs:
         # Optional. Commit message for the created commit.
         # Defaults to "Apply automatic changes"
         commit_message: Update glyphset data
+        skip_checkout: true
 
 # jobs:
 #   diff:
