--- a/.github/workflows/update_pr.yml
+++ b/.github/workflows/update_pr.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: ${{ github.head_ref }}
+        token: ${{ secrets.PAT }}
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -33,7 +34,6 @@ jobs:
         # Optional. Commit message for the created commit.
         # Defaults to "Apply automatic changes"
         commit_message: Update glyphset data
-        skip_checkout: true
 
 # jobs:
 #   diff:
